styles/sidebar-left.less
@import "variables";
@sidebar-icon-width: 28px;

// Sidebar width
.column-RootSidebar,
.column-MessageListSidebar,
.preferences-wrap .preferences-sidebar {

	min-width: @berend-sidebar-width !important;
	max-width: @berend-sidebar-width !important;

	+ .flexbox-handle-horizontal {
		cursor: default; // Since the sidebar is currently not resizable in this theme
	}

}

// Activity notice
.sidebar-activity-transition-wrapper {
	position: fixed;
	bottom: 0;
	width: 100%;
	z-index: 3;
}
.sidebar-activity {
	box-shadow: none;
	text-align: center;
	background: @berend-bottom-toolbar-color;
	.item {
		border-top: 1px solid @berend-border-medium;
		border-bottom: 0;
		height: @berend-toolbar-height;
		> div {
			float: none !important;
			display: inline-block;
			padding: @berend-padding-small ( @berend-padding-list-item-vertical / 2 ) 0 !important;
			line-height: @berend-button-height;
			vertical-align: bottom;
		}
	}
}

// Acount switching arrow
@berend-account-switcher-vertical-padding: @berend-padding-list-item-vertical + 1px;
.account-switcher {
	top: @berend-account-switcher-vertical-padding;
	right: @berend-padding-list-item-horizontal;
	left: 0;
	text-align: right;
}

// Acount switcher hover
.account-sidebar-sections section:first-child .heading:hover,
.account-switcher:hover + .account-sidebar-sections section:first-child .heading {
	background: white;
	color: @berend-text-color-dark;
}

// Inbox, folder lists
.account-sidebar-sections {
	padding-bottom: @berend-padding-small + @berend-button-height + @berend-padding-small - @berend-padding-list-item-vertical; // Extra space to prevent the Feedback button from overlapping folder names

	// Individual sections
	section {
		position: relative;
		margin-bottom: @berend-padding-list-item-vertical;

		// List heading
		.heading {
			font-size: @berend-font-size-medium;
			font-weight: normal;
			color: @berend-text-color-light;
			letter-spacing: normal;
			padding: @berend-padding-list-item-vertical @berend-padding-list-item-horizontal ( @berend-padding-list-item-vertical / 2 );
			cursor: default;
			// Show / Hide button
			.collapse-button {
				display: inline-block !important;
				transition: opacity @berend-transition-time, color @berend-transition-time;
				min-width: 36px;
				text-align: right;
				margin-right: 0;
				opacity: 0;
				&:hover {
					color: @berend-text-color-dark;
				}
			}
			&:hover .collapse-button {
				opacity: 1;
			}
		}

		// Account switcher
		&:first-child .heading {
			color: @berend-text-color-medium;
			border-bottom: 1px solid @berend-border-medium;
			padding-top: @berend-account-switcher-vertical-padding;
			padding-bottom: @berend-account-switcher-vertical-padding;
			margin-bottom: @berend-padding-list-item-vertical - 3px;
			transition: color @berend-transition-time, background-color @berend-transition-time;
		}

		// Items
		.item-container {

			// Item collapse arrow
			.disclosure-triangle {
				width: @berend-padding-list-item-horizontal;
				padding-right: ( @berend-padding-list-item-horizontal - 6px ) / 2;
				padding-left: ( @berend-padding-list-item-horizontal - 6px ) / 2;
				padding-bottom: 0;
				transition: opacity @berend-transition-time;
				&.visible {
					opacity: 0;
				}
			}
			&:hover .disclosure-triangle {
				opacity: 1;
			}

			.item {
				font-size: @berend-font-size-medium;
				line-height: @sidebar-icon-width;
				color: @berend-text-color-medium;
				transition: color @berend-transition-time, background-color @berend-transition-time;
				&:hover,
				&.selected {
					color: @berend-text-color-dark;
				}
				&.selected {
					background: none;
					img.content-mask {
						background-color: @berend-ui-grey;
					}
				}
				// Icon
				img.content-mask {
					background: @berend-light-grey;
					transition: background-color @berend-transition-time;
				}
				.name {
					padding-right: @berend-padding-list-item-horizontal;
				}
			}

		}

		// Sub items
		@berend-sidebar-submenu-item-height: 24px;
		.item-children {
			padding-top: 3px;
			padding-bottom: 5px;
			.disclosure-triangle {
				padding-top: 5px;
			}
			.item {
				line-height: @berend-sidebar-submenu-item-height;
				.name {
					padding-top: 0;
					padding-bottom: 0;
					line-height: @berend-sidebar-submenu-item-height;
				}
			}
		}

		// Counter & Add folder/label icon
		.item .item-count-box,
		.add-item-button {
			position: absolute;
			right: @berend-padding-list-item-vertical;
			background: none !important;
			color: @berend-text-color-light;
			font-size: 1em;
			font-weight: normal;
			box-shadow: none;
			// Inbox unread count
			&.inbox {
				color: @berend-blue;
				//&:before {
				//	content: "+";
				//}
			}
		}

		// Add folder/label icon
		.add-item-button {
			position: static;
			img {
				background-color: @berend-light-grey;
				transition: background-color @berend-transition-time;
			}
			&:hover img {
				background-color: @berend-ui-grey;
			}
		}

	}

}

